3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove (legacy_)apply_container that wasn't used - called only for non players,
 but starts by returning if applier is not a player.
Rename (legacy_)esrv_apply_container to (legacy_)apply_container.
 include/sproto.h
 server/apply.c player.c
 types/container/container.c
 types/legacy/apply.c
Nicolas Weeger 2007-05-13

Fix unit test pics (those are dummy ones, to be replaced someday). Add more tests to objects.
 test/templates/checkTextResult.xsl: put dummy stuff so it works (copied from logresult.xsl)
 test/templates/crossfire-logo-unit.png
 test/templates/crossfire-logo-unit-failed.png
 test/templates/crossfire-logo-unit-success.png
 test/templates/error.png
 test/templates/failure.png
 test/templates/success.png
 test/templates/txtlog.png
 test/toolkit/toolkit_common.c: use multipart-aware function
 test/unit/common/check_object.c: implement more tests
 test/unit/common/check_shstr.c: don't try to add_string(NULL) if MANY_CORES is set, abort().
 test/unit/server/Makefile.am: add libtypes.a to server.
Nicolas Weeger 2007-05-13

Remove obsolete fields.
 common/loader.l
 include/attack.h
Nicolas Weeger 2007-05-13

server/skill_util.c: fix wrong 'skills' display when no god is whoreshipped.
Nicolas Weeger 2007-05-10

server/disease.c: fix bug #1713112: rabies infects audience of the arena.
Nicolas Weeger 2007-05-09

server/c_wiz.c: fix multipart object creation.
Nicolas Weeger 2007-05-09

server/plugins.c: fix wrong parameter order.
Nicolas Weeger 2007-05-08

Add 'Crossfire.Object.Race' attribute.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-05-08
