@@ -46,7 +46,6 @@
 #include <math.h>
 
 static int dragon_eat_flesh(object *op, object *meal);
-static void apply_item_transformer(object *pl, object *transformer);
 static void apply_lighter(object *who, object *lighter);
 static void scroll_failure(object *op, int failure, int power);
 
@@ -3505,117 +3504,6 @@ void apply_changes_to_player(object *pl, object *change) {
             break;
         }
     }
-}
-
-/**
- * This handles items of type 'transformer'.
- * Basically those items, used with a marked item, transform both items
- * into something else.
- * "Transformer" item has food decreased by 1, removed if 0 (0 at start
- * means unlimited)..
- * Change information is contained in the 'slaying' field of the marked item.
- * The format is as follow: transformer:[number ]yield[;transformer:...].
- * This way an item can be transformed in many things, and/or many objects.
- * The 'slaying' field for transformer is used as verb for the action.
- */
-static void apply_item_transformer( object* pl, object* transformer )
-{
-    object* marked;
-    object* new_item;
-    char* find;
-    char* separator;
-    int yield;
-    char got[ MAX_BUF ];
-    int len;
-    char name_t[MAX_BUF], name_m[MAX_BUF];
-
-    if ( !pl || !transformer )
-        return;
-    marked = find_marked_object( pl );
-    query_name( transformer, name_t, MAX_BUF );
-    if ( !marked ) {
-        draw_ext_info_format( NDI_UNIQUE, 0, pl,
-                              MSG_TYPE_APPLY, MSG_TYPE_APPLY_ERROR,
-                              "Use the %s with what item?",
-                              "Use the %s with what item?",
-                              name_t );
-        return;
-    }
-
-    query_name( marked, name_m, MAX_BUF );
-    if ( !marked->slaying ) {
-        draw_ext_info_format( NDI_UNIQUE, 0, pl,
-                              MSG_TYPE_APPLY, MSG_TYPE_APPLY_ERROR,
-                              "You can't use the %s with your %s!",
-                              "You can't use the %s with your %s!",
-                              name_t, name_m );
-        return;
-    }
-        /* check whether they are compatible or not */
-    find = strstr( marked->slaying, transformer->arch->name );
-    if ( !find || ( *( find + strlen( transformer->arch->name ) ) != ':' ) ) {
-        draw_ext_info_format( NDI_UNIQUE, 0, pl,
-                              MSG_TYPE_APPLY, MSG_TYPE_APPLY_ERROR,
-                              "You can't use the %s with your %s!",
-                              "You can't use the %s with your %s!",
-                              name_t, name_m );
-        return;
-    }
-    find += strlen( transformer->arch->name ) + 1;
-        /* Item can be used, now find how many and what it yields */
-    if ( isdigit( *( find ) ) ) {
-        yield = atoi( find );
-        if ( yield < 1 ) {
-            query_base_name( marked, 0, name_m, MAX_BUF );
-            LOG( llevDebug,
-                 "apply_item_transformer: item %s has slaying-yield %d.\n",
-                 name_m, yield );
-            yield = 1;
-        }
-    } else
-        yield = 1;
-
-    while ( isdigit( *find ) )
-        find++;
-    while ( *find == ' ' )
-        find++;
-    memset( got, 0, MAX_BUF );
-    if ( (separator = strchr( find, ';' ))!=NULL) {
-        len = separator - find;
-    } else {
-        len = strlen(find);
-    }
-    if ( len > MAX_BUF-1)
-        len = MAX_BUF-1;
-    strcpy( got, find );
-    got[len] = '\0';
-
-        /* Now create new item, remove used ones when required. */
-    new_item = create_archetype( got );
-    if ( !new_item ) {
-        query_base_name( marked, 0, name_m, MAX_BUF );
-        draw_ext_info_format( NDI_UNIQUE, 0, pl,
-                              MSG_TYPE_APPLY, MSG_TYPE_APPLY_FAILURE,
-                              "This %s is strange, better to not use it.",
-                              "This %s is strange, better to not use it.",
-                              name_m );
-        return;
-    }
-    new_item->nrof = yield;
-    query_base_name( marked, 0, name_m, MAX_BUF );
-    draw_ext_info_format( NDI_UNIQUE, 0, pl, MSG_TYPE_APPLY,
-                          MSG_TYPE_APPLY_SUCCESS,
-                          "You %s the %s.",
-                          "You %s the %s.",
-                          transformer->slaying, name_m );
-    insert_ob_in_ob( new_item, pl );
-    esrv_send_inventory( pl, pl );
-        /* Eat up one item */
-    decrease_ob_nr( marked, 1 );
-        /* Eat one transformer if needed */
-    if ( transformer->stats.food )
-        if ( --transformer->stats.food == 0 )
-            decrease_ob_nr( transformer, 1 );
 }
 
 void legacy_apply_lighter(object* who, object* lighter)
